--- a/css/main.css
+++ b/css/main.css
@@ -8,13 +8,21 @@ body {}
 /* site-header styles */
 
 .bg-set {
-    background-color: #fff5e7;
-} 
+    background-color: #F7F1E3;
+}
+.main-section {
+    padding: 40px;
+}
 
 .logo {
     width: 300px;
 }
-
+.menu {
+    list-style:none;
+}
+.menu li {
+    display:inline-block
+}
 .menuLinks a {
     font-weight: 700;
     font-size: 1.25rem;
@@ -86,7 +94,7 @@ body {}
     font-size: 1rem;
     font-weight: 700;
     color: #7f7979;
-    
+
 }
 
 .section-qa h1 {
@@ -104,11 +112,11 @@ body {}
 }
 
 .testimonial:nth-child(even) {
-    align-self: flex-end; 
+    align-self: flex-end;
 }
 
 .testimonial:nth-child(even) .avatar-container {
-    order: 5; 
+    order: 5;
 }
 
 .testimonial:nth-child(even) .testimonial-description, .testimonial:nth-child(even) .testimonial-name {
@@ -151,5 +159,3 @@ body {}
     font-size: 1rem;
     font-weight: 400;
 }
-
-
